# StockSensei

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  agent.py  command_prompt.py  config.py  main.py  providers.py  pyproject.toml  runner.py  tools.py  ui_blocks.py  utils.py
changelogs/: 06-05-2026-thomas.md  07-06-2026-thomas.md  08-05-2026-thomas.md  21-04-2026-walos.md  21-05-2026-walos.md  24-04-2026-tom.md  25-04-2026-thomas.md  25-04-2026-tom.md
docs/adr/: 0001-trusted-python-extensions.md  0002-core-extension-architecture.md
stocksensei/: __init__.py
stocksensei/core/: __init__.py  agent.py  block_builders.py  block_formatting.py  block_models.py  block_renderer.py  config.py  events.py  providers.py  responses.py  service.py  session.py  tools.py
stocksensei/extensions/: __init__.py  api.py  discovery.py  manager.py
stocksensei/registries/: __init__.py  blocks.py  commands.py  tools.py
stocksensei/ui/: __init__.py
stocksensei/ui/terminal/: __init__.py  config.py  renderers.py
wiki/: CONTEXT.md  log.md
wiki/.obsidian/: graph.json  workspace.json
wiki/code/: agent.md  command_prompt.md  config.md  main.md  providers.md  runner.md  tools.md  ui_blocks.md  utils.md
wiki/code/.obsidian/: workspace.json
wiki/code/stocksensei/: __init__.md
wiki/code/stocksensei/core/: __init__.md  events.md  providers.md  service.md  session.md
wiki/code/stocksensei/extensions/: __init__.md  api.md  discovery.md  manager.md
wiki/code/stocksensei/registries/: __init__.md  blocks.md  commands.md  tools.md
wiki/code/stocksensei/ui/: __init__.md
wiki/code/stocksensei/ui/terminal/: __init__.md  renderers.md
