[project]
name = "stocksensei"
version = "0.1.0"
description = "AI-powered terminal stock analyzer with pluggable LLM providers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Le Nguyen Minh", email = "lenminh2007@gmail.com"}]
requires-python = ">=3.13"
keywords = ["stocks", "finance", "cli", "llm", "langchain", "yfinance", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "yfinance>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/lenminh002/StockSensei"
Repository = "https://github.com/lenminh002/StockSensei"
Issues = "https://github.com/lenminh002/StockSensei/issues"

[project.scripts]
stocksensei = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "agent", "tools", "config", "utils", "ui_blocks", "command_prompt", "providers", "runner"]
